# django-auth-service

./: .gitignore  docker-compose.yml  pyproject.toml
auth_service/: .env  Dockerfile  apps.py  docker-compose.yml  pyproject.toml  urls.py  utils.py  views.py
auth_service/app/: apps.py  models.py  serializers.py  settings.py  urls.py  views.py
auth_service/src/: apps.py  models.py  settings.py  views.py  wsgi.py
config/: settings.py  urls.py
events_service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
events_service/app/: middleware.py  models.py  permissions.py  views.py
events_service/app/migrations/: 0001_initial.py
events_service/core/: settings.py  urls.py
